--- a/src/cascadia/TerminalSettingsEditor/Profiles.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles.xaml
@@ -33,17 +33,6 @@
                 <TextBlock FontFamily="{x:Bind Name}"
                            Text="{x:Bind LocalizedName}" />
             </DataTemplate>
-
-            <local:ColorToBrushConverter x:Key="ColorToBrushConverter" />
-            <local:PercentageConverter x:Key="PercentageConverter" />
-            <local:PercentageSignConverter x:Key="PercentageSignConverter" />
-            <local:FontWeightConverter x:Key="FontWeightConverter" />
-            <local:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
-            <local:StringIsEmptyConverter x:Key="StringIsEmptyConverter" />
-            <local:PaddingConverter x:Key="PaddingConverter" />
-            <local:StringIsNotDesktopConverter x:Key="StringIsNotDesktopConverter" />
-            <local:DesktopWallpaperToEmptyStringConverter x:Key="DesktopWallpaperToEmptyStringConverter" />
-
         </ResourceDictionary>
     </Page.Resources>
 
@@ -78,7 +67,7 @@
                         -->
                         <local:SettingContainer x:Uid="Profile_Name"
                                                 Margin="0,0,0,24"
-                                                Visibility="{x:Bind State.Profile.IsBaseLayer, Mode=OneWay, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
+                                                Visibility="{x:Bind local:Converters.InvertedBooleanToVisibility(State.Profile.IsBaseLayer), Mode=OneWay}">
                             <TextBox Style="{StaticResource TextBoxSettingStyle}"
                                      Text="{x:Bind State.Profile.Name, Mode=TwoWay}" />
                         </local:SettingContainer>
@@ -90,7 +79,7 @@
                                                 ClearSettingValue="{x:Bind State.Profile.ClearCommandline}"
                                                 HasSettingValue="{x:Bind State.Profile.HasCommandline, Mode=OneWay}"
                                                 SettingOverrideSource="{x:Bind State.Profile.CommandlineOverrideSource, Mode=OneWay}"
-                                                Visibility="{x:Bind State.Profile.IsBaseLayer, Mode=OneWay, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
+                                                Visibility="{x:Bind local:Converters.InvertedBooleanToVisibility(State.Profile.IsBaseLayer), Mode=OneWay}">
                             <StackPanel Orientation="Horizontal">
                                 <TextBox Style="{StaticResource TextBoxSettingStyle}"
                                          Text="{x:Bind State.Profile.Commandline, Mode=TwoWay}" />
@@ -150,7 +139,7 @@
 
                         <!--  Hidden  -->
                         <local:SettingContainer x:Uid="Profile_Hidden"
-                                                Visibility="{x:Bind State.Profile.IsBaseLayer, Mode=OneWay, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
+                                                Visibility="{x:Bind local:Converters.InvertedBooleanToVisibility(State.Profile.IsBaseLayer), Mode=OneWay}">
                             <ToggleSwitch IsOn="{x:Bind State.Profile.Hidden, Mode=TwoWay}" />
                         </local:SettingContainer>
 
@@ -280,10 +269,10 @@
                                         </Grid.ColumnDefinitions>
                                         <Slider x:Name="AcrylicOpacitySlider"
                                                 Grid.Column="0"
-                                                Value="{x:Bind State.Profile.AcrylicOpacity, Converter={StaticResource PercentageConverter}, Mode=TwoWay}" />
+                                                Value="{x:Bind local:Converters.PercentageToPercentageValue(State.Profile.AcrylicOpacity), BindBack=State.Profile.SetAcrylicOpacityPercentageValue, Mode=TwoWay}" />
                                         <TextBlock Grid.Column="1"
                                                    Style="{StaticResource SliderValueLabelStyle}"
-                                                   Text="{Binding ElementName=AcrylicOpacitySlider, Path=Value, Mode=OneWay, Converter={StaticResource PercentageSignConverter}}" />
+                                                   Text="{x:Bind local:Converters.AppendPercentageSign(AcrylicOpacitySlider.Value), Mode=OneWay}" />
                                     </Grid>
                                 </StackPanel>
                             </local:SettingContainer>
@@ -307,7 +296,7 @@
                                     </Grid.ColumnDefinitions>
                                     <Slider x:Name="PaddingSlider"
                                             Grid.Column="0"
-                                            Value="{x:Bind State.Profile.Padding, Converter={StaticResource PaddingConverter}, Mode=TwoWay}" />
+                                            Value="{x:Bind local:Converters.MaxValueFromPaddingString(State.Profile.Padding), BindBack=State.Profile.SetPadding, Mode=TwoWay}" />
                                     <TextBlock Grid.Column="1"
                                                Style="{StaticResource SliderValueLabelStyle}"
                                                Text="{Binding ElementName=PaddingSlider, Path=Value, Mode=OneWay}" />
@@ -333,7 +322,7 @@
                                         Margin="32,0,0,0"
                                         Click="CreateUnfocusedAppearance_Click"
                                         Style="{StaticResource BaseButtonStyle}"
-                                        Visibility="{x:Bind State.Profile.HasUnfocusedAppearance, Mode=OneWay, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
+                                        Visibility="{x:Bind local:Converters.InvertedBooleanToVisibility(State.Profile.HasUnfocusedAppearance), Mode=OneWay}">
                                     <Button.Content>
                                         <FontIcon FontSize="{StaticResource StandardIconSize}"
                                                   Glyph="&#xE710;" />
