--- a/src/cascadia/TerminalSettingsEditor/MainPage.xaml
+++ b/src/cascadia/TerminalSettingsEditor/MainPage.xaml
@@ -9,13 +9,43 @@
       xmlns:local="using:Microsoft.Terminal.Settings.Editor"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-      Background="{ThemeResource SettingsPageBackground}"
       mc:Ignorable="d">
 
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="CommonResources.xaml" />
+
+                <ResourceDictionary>
+                    <ResourceDictionary.ThemeDictionaries>
+
+                        <!--
+                            These two values are "SolidBackgroundFillColorTertiary".
+                            We can't just put those here though as
+                            StaticResources, because XAML will evaluate their
+                            values when the App is first loaded, and we'll
+                            always use the value from the OS theme, regardless
+                            of the requested theme. Kinda the same thing we've
+                            had to do with TabViewBackground in the past.
+                        -->
+
+                        <ResourceDictionary x:Key="Dark">
+                            <Color x:Key="SettingsPageBackground">#282828</Color>
+                        </ResourceDictionary>
+
+                        <ResourceDictionary x:Key="Light">
+                            <Color x:Key="SettingsPageBackground">#F9F9F9</Color>
+                        </ResourceDictionary>
+
+                        <ResourceDictionary x:Key="HighContrast">
+                            <!--  Define resources for HighContrast mode here  -->
+                            <StaticResource x:Key="SettingsPageBackground"
+                                            ResourceKey="SystemColorWindowColorBrush" />
+                        </ResourceDictionary>
+
+                    </ResourceDictionary.ThemeDictionaries>
+                </ResourceDictionary>
+
             </ResourceDictionary.MergedDictionaries>
 
             <SolidColorBrush x:Key="NavigationViewExpandedPaneBackground"
@@ -30,7 +60,7 @@
     </Page.Resources>
 
     <muxc:NavigationView x:Name="SettingsNav"
-                         Background="Transparent"
+                         Background="{ThemeResource SettingsPageBackground}"
                          IsBackButtonVisible="Collapsed"
                          IsSettingsVisible="False"
                          ItemInvoked="SettingsNav_ItemInvoked"
